syntax = "proto3";

package go_actor;

option go_package = "./pb";

// 作为db服务唯一的IdType
enum DataType {
  DataTypeDataTypeNone = 0;  // 数据类型-无
  DataTypeGenerator    = 1;  // 数据类型-Generator
  DataTypeTexasRoom    = 2;  // 数据类型-TexasRoom
}

enum GameType {
  GameTypeNone = 0; // 游戏类型-无
  GameTypeRPG = 1; // 游戏类型-斗蛐蛐
}

enum EnvType {
  EnvTypeNone = 0; // 环境类型-无
  EnvTypeDevelop = 1; // 环境类型-测试
  EnvTypeRelease = 2; // 环境类型-正式
  EnvTypeBeta = 3; // 环境类型-发布
}

// 作为builder服务唯一的IdType
enum GeneratorType {
  GeneratorTypeBegin = 0;  // 生成器类型-begin
  GeneratorTypeRPG = 1;  // 生成器类型-R
  GeneratorTypeEnd   = 100;  // 生成器类型-end
}

// 回合制游戏状态
enum GameState {
  GAME_INIT                 = 0;    // 初始化战斗信息
  GAME_LOAD                 = 1;    // 加载战斗环境相关 战场效果
  GAME_PRE                  = 2;    // 战前回合
  GAME_ACT                  = 3;    // 决策回合
  GAME_AFTER                = 4;    // 战后回合
  GAME_ENEMY                = 5;    // 敌人行动回合 -> 结束后 至 战前回合
  GAME_SETTLE               = 6;    // 游戏结算 奖励阶段
  GAME_Finish               = 7;    // 结束状态 回收战斗对象
}

// 玩家状态
enum PlayerStatus {
  PlayerStatusNone     = 0;  // 玩家状态-无
}